...
        label = { Text(stringResource(field.label), style = MaterialTheme.typography.labelMedium, color = soulColor) },
        placeholder = { Text(stringResource(R.string.placeholder_weight), style = MaterialTheme.typography.labelMedium) },
        trailingIcon = {
            IconButton(
                enabled = isIdle,
                onClick = { openPicker = true },
                modifier = Modifier.semantics { testTag = "btn_open_weight_picker" }
            ) {
                Icon(
                    painter = painterResource(R.drawable.ic_weight_scale),
                    contentDescription = stringResource(R.string.cd_pick_weight)
                )
            }
...
        label = { Text(stringResource(field.label), style = MaterialTheme.typography.labelMedium, color = soulColor) },
        placeholder = { Text(stringResource(R.string.placeholder_height), style = MaterialTheme.typography.labelMedium) },
        trailingIcon = {
            IconButton(
                enabled = isIdle,
                onClick = { openPicker = true },
                modifier = Modifier.semantics { testTag = "btn_open_height_picker" }
            ) {
                Icon(
                    painter = painterResource(R.drawable.ic_tape_measure),
                    contentDescription = stringResource(R.string.cd_pick_height)
                )
            }
...
