...
    <string name="onboarding_4_title">Let\'s get to know you!</string>
    <string name="onboarding_4_desc">A little info goes a long way toward making this truly yours.</string>
    <string name="onboarding_5_title">We require a little more informations</string>
    <string name="onboarding_5_desc">Please provide all the required information to personalize your experience.</string>

    <!-- Buttons -->
    <string name="btn_next">Next</string>
    <string name="btn_start">Start</string>
    <string name="btn_ok" translatable="false">OK</string>
    <string name="btn_cancel">Cancel</string>

    <!-- Pickers -->
    <string name="picker_default_title">Scroll to pick a value</string>
    <string name="picker_title_height">Select your height</string>
...
