...
                    when (field) {
                        is TextInput -> {
                            val focusRequester = remember { FocusRequester() }
                            val focusManager = LocalFocusManager.current
                            OutlinedTextField(
                                modifier = Modifier
                                    .semantics { testTag = "input_full_name" }
                                    .focusRequester(focusRequester),
                                value = field.value,
                                label = { Text(stringResource(field.label), style = MaterialTheme.typography.labelMedium) },
                                singleLine = true,
                                shape = RoundedCornerShape(17.dp),
                                onValueChange = { onboardingModel.updateName(it) },
...
